--- a/avr-skeleton/Makefile
+++ b/avr-skeleton/Makefile
@@ -27,7 +27,11 @@ BAUD=38400
 
 AVRDUDE_FLAGS=-p ${MCU_AVRDUDE} -C +./avrdude_gpio.conf -c ${AVRDUDE_CONFIG} -V
 CC=avr-gcc
-CPPFLAGS=-std=c11 -Wall -Wextra -Os -DF_CPU=${F_CPU} -DBAUD=${BAUD} -mmcu=${MCU_GCC} -ffunction-sections -fdata-sections -mcall-prologues
+WARNINGS=-Wall -Wextra \
+	 -Wformat=2 -Wno-unused-parameter -Wshadow \
+	 -Wwrite-strings -Wstrict-prototypes -Wold-style-definition \
+	 -Wredundant-decls -Wnested-externs -Wmissing-include-dirs -Wjump-misses-init -Wlogical-op
+CPPFLAGS=-std=c11 ${WARNINGS} -Os -DF_CPU=${F_CPU} -DBAUD=${BAUD} -mmcu=${MCU_GCC} -ffunction-sections -fdata-sections -mcall-prologues
 
 all: ${PROJECT}.hex
 
